@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.13
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed error when shift-clicking items to move them
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.12
 Date: 2020-11-07
